Unit tests for ChunkLinker, CodegenFragmenter, GuidelineParse, and some of Main. updated POM to allow for JaCoCo for code coverage. Mockito added, however unable to implement correctly